# batt2mqtt

./: CMakeLists.txt  LICENSE  README.md  batt2mqtt.plist
src/: batt2mqtt.c
